# token-gating

./: .env.example  2nd review group 6.pptx  LICENSE  README.md  evaluation.py  evaluation_results_100.csv  main.py  pyproject.toml  redread.py  requirements.txt
Frontend/: frontend.py
app/: server.py
evaluation/: evaluator.py
gating/: token_gater.py
llm/: llm_interface.py
memory/: history_db.py  memory_provider.py
rag/: retriever.py
scripts/: bench_run.py  embed_index.py  test_jsonl.py
src/token_optimiser/: api.py  attention.py  heuristic.py  learned.py  models.py  prompt.py  retriever.py  utils.py
tests/: test_api.py  test_heuristic.py  test_prompt.py
tokenoptimizer1/: evaluation.py  gatingadith.py  main.py  pp.py
tokenoptimizer1/evaluation/: evaluator.py
tokenoptimizer1/gating/: token_gater.py
tokenoptimizer1/rag/: document_ingestor.py
utils/: text_utils.py
versions/token_optimiser_v1/: main.py  requirements.txt
versions/token_optimiser_v1/config/: settings.py
versions/token_optimiser_v1/evaluation/: evaluator.py
versions/token_optimiser_v1/gating/: token_gater.py
versions/token_optimiser_v1/rag_storage/: effiecient_agent.json
versions/v2.0/: token_gater.py
