[tool.poetry]
name = "token-optimiser"
version = "0.1.0"
description = "Token gating + memory retriever"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95"
uvicorn = "^0.22"
pydantic = "^1.10"
numpy = "^1.26"
scikit-learn = "^1.3"
sentence-transformers = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
